fixed card width bug on small posters

--- a/src/app/movies/movies-grid/movies-grid.component.css
+++ b/src/app/movies/movies-grid/movies-grid.component.css
@@ -70,3 +70,7 @@
 {
   max-width: 100%;
 }
+.t
+{
+  flex-grow: 1;
+}
